major improvements and refactorings, adopt ggsql-grammar (#20)
Co-authored-by: Johannes Zemlin <johannes.zemlin@mailbox.org>